refactor: TableGroup 관련 API 요청, 응답에 DTO 사용하도록 변경